Corrección modificación de actividad de empresa

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -43,6 +43,7 @@
     "Dashboard": "Inicio",
     "Credentials": "Credenciales",
     "New Credential": "Nueva credencial",
+    "Edit Credential": "Editar credencial",
     "Business": "Empresa",
     "Start year": "Gestión inicial",
     "Final year": "Gestión final"
