Importación de datos de empresa desde archivo Excel funcionando

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -40,6 +40,7 @@
     "Ensure your account is using a long, random password to stay secure.": "Verifica que tu contraseña sea lo bastante segura.",
     "Current Password": "Contraseña actual",
     "New Password": "Contraseña nueva",
+    "Upload": "Cargar",
     "Dashboard": "Inicio",
     "Credentials": "Credenciales",
     "New Credential": "Nueva credencial",
